samples/_failures_safe/1761442200_c3dad6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c862dcd8.c: In function ‘main’:
./samples/SAFE/__tmp_c862dcd8.c:207:20: error: missing terminating " character
  207 |             printf("State
      |                    ^~~~~~
./samples/SAFE/__tmp_c862dcd8.c:207:13: error: expected expression at end of input
  207 |             printf("State
      |             ^~~~~~
./samples/SAFE/__tmp_c862dcd8.c:207:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c862dcd8.c:207:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c862dcd8.c:207:13: error: expected declaration or statement at end of input
